--- a/plugins_en.html
+++ b/plugins_en.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{@page.title}}</title>
+    <title>Plugins | Fat-Free Fridge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="F3-Junkies">
-    <link href="{{@BASE}}/{{@UI,@CSS}}bootstrap.css" rel="stylesheet">
-    <link href="{{@BASE}}/{{@UI,@CSS}}main.css" rel="stylesheet">
-    <link href="{{@BASE}}/{{@UI,@CSS}}bootstrap-responsive.css" rel="stylesheet">
-    <base href="http://www.ikkez.de/fatfreefridge/" />
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,6 +23,8 @@
 
 <body>
 
+<a href="https://github.com/ikkez/FatFreeFridge"><img style="position: absolute; z-index: 1200; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container-fluid">
@@ -33,12 +34,13 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="#">Fat-Free Fridge</a>
-            <div class="nav-collapse">
+            <div class="nav-collapse">                
                 <ul class="nav">
-                    <repeat group="{{@menu}}" key="{{@nav}}" value="{{@title}}">
-                        <li {{(F3::get('PARAMS.page') == @nav)?'class="active"':''}}><a href="{{@nav}}/">{{@title}}</a></li>
-                    </repeat>
-                </ul>
+					<li><a href="index.html">Home</a></li>
+					<li ><a href="examples_en.html">Examples</a></li>
+					<li ><a href="docs_en.html">Documentation</a></li>
+					<li class="active" ><a href="plugins_en.html">Plugins</a></li>
+				</ul>
             </div>
         </div>
     </div>
