--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>get a fresh kickstart</h1>
                 <img src="img/fatfreefridge_logo.png" class="logo" />
                 <p>for your next great thing, build on the glorious <a href="http://fatfree.sourceforge.net/" target="_blank">PHP Fat-Free Framework.</a><br />
-                This is going to be a huge wiki, glossar, snippet base and community. Hopefully multilingual.</p>
+                The FatFreeFridge is an unofficial userguide which provides you a bunch of preserved examples and use-cases to make you familiar with F3.</p>
                 <p><a class="btn btn-primary btn-large" id="heromore" title="Contribute!" data-content="To complete this userguide, we would appreciate your help." href="#" rel="popover">Learn more &raquo;</a></p>
             </div>
             <div class="row">
