--- a/examples_en.html
+++ b/examples_en.html
@@ -106,8 +106,9 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{@BASE}}/{{@UI,@JS}}jquery-1.7.1.min.js"><\/script>')</script>
-<script src="{{@BASE}}/{{@UI,@JS}}bootstrap.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
