further work on details for set,get,clear, .. smooth scrolling added

--- a/docs_en.html
+++ b/docs_en.html
@@ -52,9 +52,12 @@
             <div class="well sidebar-nav">
                 <ul class="nav nav-list">
                     <li class="nav-header">Core Pack</li>
-                    <li class="active"><a href="#">Hive</a></li>
-                    <li><a href="#">Encoding</a></li>
-                    <li><a href="#">Routing</a></li>
+                    <li><a href="#hive">Hive</a></li>
+                    <li><a href="#encoding">Encoding</a></li>
+                    <li><a href="#routing">Routing</a></li>
+                    <li><a href="#validation">Validation</a></li>
+                    <li><a href="#file">File</a></li>
+                    <li><a href="#misc">Misc</a></li>
                     <li class="nav-header">SQL Handler</li>
                     <li><a href="#">Setup DB</a></li>
                     <li><a href="#">Query DB</a></li>
@@ -81,7 +84,7 @@
                     <p>This Documentation gives you a quick reference about all classes and methods that comes with the basic framework package.</p>
                     <hr />
 
-                    <div class="package">
+                    <div class="package" id="hive">
                         <h2>Hive</h2>
                         <div>
                             <h3>F3::set( <span>string</span> key, <span>mixed</span> value, [<span>bool = FALSE</span> persist], [<span>bool = TRUE</span> resolve] ); <span>void</span></h3>
@@ -89,29 +92,64 @@
 							<button class="btn btn-mini btn-info">view details</button>
 							<div class="hidden">
 								<p>setting framework variables</p>
-								<pre>
-	F3::set('var',value);
-	F3::set('colors',array('red','blue','yellow'));
-	F3::set('a',123); // a=123
-	F3::set('b','c'); // b='c'
-	F3::set('c','whatever'); // c='whatever'
-	F3::set('{{@b}}','wherever'); // c='wherever'
-	F3::set('{{@b}}','{{@a+1}}'); // c='124'
-	F3::set('{{@b}}',F3::get('a')+1); // c=124
-	F3::set('hash',array('x'=>1,'y'=>2,'z'=>3));
-	F3::set('hash.x',1);
-	F3::set('hash.y',2);
-	F3::set('hash.z',3);
-								</pre>
+<pre>
+F3::set('a',123); // a=123
+F3::set('b','c'); // b='c'
+F3::set('c','whatever'); // c='whatever'
+F3::set('d',TRUE); // d=TRUE
+</pre>
+								<p>setting arrays</p>
+<pre>
+F3::set('hash',array('x'=>1,'y'=>2,'z'=>3));
+
+// dot notation is also possible
+F3::set('hash.x',1);
+F3::set('hash.y',2);
+F3::set('hash.z',3);
+</pre>
+								<p>If the <strong>persist</strong> parameter is TRUE, the var is going to be cached.</p>
+								<div class="alert"><strong>Contribute!</strong> More info and an example is missing here.</div>
+								<p>By default, the <strong>resolve</strong> parameter allows you to use the F3 specific syntax in getting and setting vars.</p>
+<pre>
+F3::set('{{@b}}','wherever'); 		// c='wherever'
+F3::set('{{@b}}','{{@a+1}}'); 		// c='124'
+F3::set('{{@b}}',F3::get('a')+1); 	// c=124
+
+F3::set('color','green');
+F3::set('car','this car is {{@color}}.'); // car='this car is green.'
+</pre>
+								<div class="alert alert-info"><strong>Notive:</strong> changing `color` afterwards, wont affect `car`,	as it gets resolved and saved to var on setting it.</div>
 							</div>
                         </div>
                         <div>
                             <h3>F3::get( <span>string</span> key, [<span>mixed = NULL</span> arguments] ); <span>mixed</span></h3>
                             <p>Retrieve value of framework variable and apply locale rules</p>
+                            <button class="btn btn-mini btn-info">view details</button>
+                            <div class="hidden">
+                            	<p>to get a previously saved framework var use:</p>
+<pre>
+F3::get('c'); // [string] = 'whatever'
+</pre>
+                           	<p>you can also resolve other vars</p>
+<pre>
+F3::set('foo','bar');
+F3::set('bar','nice');
+F3::get('{{@foo}}'); // returns: nice
+</pre>
+                            </div>
                         </div>
                         <div>
                             <h3>F3::clear( <span>string</span> key ); <span>void</span></h3>
                             <p>Unset framework variable</p>
+                            <button class="btn btn-mini btn-info">view details</button>
+                            <div class="hidden">
+                            	<p>You can clear any framwork var like this:</p>
+<pre>
+F3::clear('foobar');
+F3::clear('SESSION'); // destroys the SESSION
+F3::clear('myArray.param1'); // removes key `param1` from array `myArray`
+</pre>
+                            </div>
                         </div>
                         <div>
                             <h3>F3::exists( <span>string</span> key ); <span>bool</span></h3>
@@ -126,7 +164,7 @@
                             <p>Determine if framework variable has been cached</p>
                         </div>
                     </div>
-                    <div class="package">
+                    <div class="package" id="encoding">
                         <h2>Encoding</h2>
                         <div>
                             <h3>F3::htmlencode( <span>string</span> string, [<span>bool = FALSE</span> all]); <span>string</span></h3>
@@ -137,7 +175,7 @@
                             <p>Convert HTML entities back to their equivalent characters</p>
                         </div>
                     </div>
-                    <div class="package">
+                    <div class="package" id="routing">
                         <h2>Routing</h2>
                         <div>
                             <h3>F3::status( <span>string</span> code ); <span>false | string</span></h3>
@@ -177,7 +215,7 @@
                         </div>
                         
                     </div>
-                    <div class="package">
+                    <div class="package" id="validation">
                         <h2>Validation</h2>
                         <div>
                             <h3>F3::scrub( <span>string</span> input,[<span>string</span> tags]); <span>string</span></h3>
@@ -186,19 +224,25 @@
                         <div>
                             <h3>F3::input(<span>string</span> fields,<span>mixed</span> funcs,[<span>string = NULL</span> tags],[<span>int</span> filter],[<span>array</span> opt],[<span>bool = TRUE</span> assign]); <span>void</span></h3>
                             <p>Remove HTML tags (except those enumerated) to protect against XSS/code injection attacks</p>
-                            <p>Default filter id is FILTER_UNSAFE_RAW. Other useful filter might be: FILTER_VALIDATE_EMAIL, FILTER_VALIDATE_URL, FILTER_VALIDATE_IP. To get a list of all supported filter use <em>print_r(filter_list());</em></p>
-                            <p>The <em>ops</em> argument describes options, used by the filter, if that filter supports options.</p>
+                            <button class="btn btn-mini btn-info">view details</button>
+                            <div class="hidden">
+	                            <p>Default filter id is FILTER_UNSAFE_RAW. Other useful filter might be: FILTER_VALIDATE_EMAIL, FILTER_VALIDATE_URL, FILTER_VALIDATE_IP. To get a list of all supported filter use <code>print_r(filter_list());</code></p>
+	                            <p>The <strong>ops</strong> argument describes options, used by the filter, if that filter supports options.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="package">
+                    <div class="package" id="file">
+                        <h2>File</h2>
+                        <div>
+                            <h3>F3::send( <span>string</span> file, [<span>int = 0</span> kbps],[<span>bool = TRUE</span> partial]); <span>bool</span></h3>
+                            <p>Transmit a file for downloading by HTTP client; If kilobytes per second is specified, output is throttled (bandwidth will not be controlled by default); Return TRUE if successful, FALSE otherwise; Support for partial downloads is indicated by third argument</p>
+                        </div>
+                    </div>
+                    <div class="package" id="misc">
                         <h2>Misc</h2>
                         <div>
                             <h3>F3::config( <span>string</span> file ); <span>void</span></h3>
                             <p>Configure framework according to INI-style file settings Cache auto-generated PHP code to speed up execution</p>
-                        </div>
-                        <div>
-                            <h3>F3::send( <span>string</span> file, [<span>int = 0</span> kbps],[<span>bool = TRUE</span> partial]); <span>bool</span></h3>
-                            <p>Transmit a file for downloading by HTTP client; If kilobytes per second is specified, output is throttled (bandwidth will not be controlled by default); Return TRUE if successful, FALSE otherwise; Support for partial downloads is indicated by third argument</p>
                         </div>
                         <div>
                             <h3>F3::render( <span>string</span> file); <span>string</span></h3> 
