--- a/docs_en.html
+++ b/docs_en.html
@@ -57,10 +57,11 @@
                 <ul class="nav nav-list">
                     <li class="nav-header">Core Pack</li>
                     <li><a href="#hive">Hive</a></li>
-                    <li><a href="#encoding">Encoding</a></li>
+                    <li><a href="#encoding">Encoding &amp Conversion</a></li>
                     <li><a href="#routing">Routing</a></li>
                     <li><a href="#validation">Validation</a></li>
-                    <li><a href="#file">File</a></li>
+                    <li><a href="#file">File System</a></li>
+                    <li><a href="#debug">Debug</a></li>
                     <li><a href="#misc">Misc</a></li>
                     <li class="nav-header">SQL Handler</li>
                     <li><a href="#">Setup DB</a></li>
