added first examples

--- a/index.html
+++ b/index.html
@@ -58,31 +58,28 @@
             </div>
             <div class="row">
                 <div class="span4">
-                    <h2>Examples</h2>
-
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
-
-                    <p><a class="btn" href="examples_en.html">View details &raquo;</a></p>
-                </div>
-                <!--/span-->
-                <div class="span4">
                     <h2>Documentation</h2>
 
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Never knew about the 3rd paremter of F3::set()? You will be amazed how much you didn't know about
+					F3. Every function is explained here including some very short examples.</p>
 
                     <p><a class="btn" href="docs_en.html">View details &raquo;</a></p>
                 </div>
                 <!--/span-->
                 <div class="span4">
+                    <h2>Examples</h2>
+
+                    <p>Don't want to dig through the docs and want to learn by some code? No problem, just take a look
+						on the examples. Starting from basic over advaced to expert. Every feature of F3 is used in 
+						these examples - you won't miss anything.</p>
+
+                    <p><a class="btn" href="examples_en.html">View details &raquo;</a></p>
+                </div>
+                <!--/span-->
+                <div class="span4">
                     <h2>Plugins</h2>
 
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Section about projects around F3 and user made plugins to make your life easier.</p>
 
                     <p><a class="btn" href="plugins_en.html">View details &raquo;</a></p>
                 </div>
@@ -109,8 +106,7 @@
 <!-- javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
+<script src="js/jquery-1.7.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 
