--- a/docs_en.html
+++ b/docs_en.html
@@ -643,8 +643,7 @@ Array
 <!-- javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write( '<script src="js/jquery-1.7.1.min.js"><\/script>' )</script>
+<script src="js/jquery-1.7.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.quicksearch.js"></script>
 <script src="js/google-code-prettify/prettify.js"></script>
